# Krajjat

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  SECURITY.md  analysis_functions.py  body_tracking_getter.py  citation.cff  classes.py  coherence_romain.py  core_functions.py  display_functions.py  gesture_synchronizer.py  graphic_classes.py  graphic_functions.py  io_functions.py  joint.py  joint_distance_plotter.py  multitaper_spectrogram_python.py  pipeline.txt  plot_functions.py  pose.py  pyproject.toml  realigner.py  realigner_graphic.py  requirements.txt  sequence.py  setup.py  skeleton_plotter.py  stats_functions.py  test_file.py  tool_functions.py
classes/: audio.py  audio_derivatives.py  exceptions.py  experiment.py  graph_element.py  graphic_classes.py  joint.py  pose.py  sequence.py  subject.py
doc/: KRAJJAT documentation.docx
docs/source/: analysis_functions.rst  appendix.rst  audio.rst  audio_derivatives.rst  classes.rst  color_schemes.rst  conf.py  dejittering.rst  dependencies.rst  display_functions.rst  exceptions.rst  functions.rst  general.rst  graph_element.rst  graphic_classes.rst  graphic_functions.rst  index.rst  install.rst  io_functions.rst  joint.rst  plot_functions.rst  pose.rst  release_notes.rst  requirements.txt  sequence.rst  stats_functions.rst  subject.rst  tool_functions.rst
local_tests/: test_envelope.py  test_file.py  test_find_delay.py  test_stats.py  test_timings.py  test_video_generation-ROMAIN-TINKYWINKY.py  test_video_generation.py  test_whatever.py
res/: color_codes.txt  color_codes_ordered.txt  color_schemes.txt  hilbert_transform_chunks.txt  hilbert_transform_chunks_2.txt  joints_positions_qualisys.txt  kinect_joints.txt  kinect_joints_silhouette_layout.txt  kualisys_joint_labels_top.txt  skeleton_connections_qualisys_bottom.txt  skeleton_connections_qualisys_top.txt  steps_gui.txt
src/: __init__.py  test_presentation.ipynb
src/krajjat/: __init__.py  analysis_functions.py  common_analysis_param_desc.py  display_functions.py  io_functions.py  plot_functions.py  stats_functions.py  tool_functions.py
test/: dataframe.xlsx  dataframe_ps.xlsx  test_analysis.py  test_audio.py  test_audio_derivatives.py  test_display_functions.py  test_experiment.py  test_graph_element.py  test_io_functions.py  test_joint.py  test_plot_functions.py  test_pose.py  test_sequence.py  test_subject.py  test_tool_functions.py  test_trial.py
test/test_audios/: test_audio_1.csv  test_audio_1.json  test_audio_1.mat  test_audio_1.pkl  test_audio_1.tsv  test_audio_4.xlsx
test/test_dataframes/: test_dataframe.csv  test_dataframe.gzip  test_dataframe.json  test_dataframe.mat  test_dataframe.pkl  test_dataframe.tsv  test_dataframe.xlsx
test/test_envelopes/: test_audio_1_envelope.aaa  test_audio_1_envelope.csv  test_audio_1_envelope.json  test_audio_1_envelope.mat  test_audio_1_envelope.pkl  test_audio_1_envelope.txt  test_audio_1_envelope.xlsx  test_audio_4_envelope.pkl  test_audio_4_envelope.xlsx
test/test_files/: dataframe_1.csv  dataframe_1.gzip  dataframe_1.json  dataframe_1.pkl  test_json_ansi.json  test_json_utf16.json  test_json_utf8.json  test_table.tsv  test_tsv.tsv  test_xlsx.xlsx
test/test_formants/: test_audio_1_f2.csv  test_audio_1_f2.json  test_audio_1_f2.mat  test_audio_1_f2.pkl  test_audio_1_f2.tsv  test_audio_1_formant.csv  test_audio_1_formant.json  test_audio_1_formant.mat  (+4 more)
tests/: lund_processing.py  test_correlation.py  test_envelope.py  test_matlab.py  test_resampling.py
(+172 files in other folders)
