[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "krajjat"
version = "1.99.8"
authors = [
  { name="Romain Pastureau", email="r.pastureau@bcbl.eu" },
]
description = "Motion capture analysis and relationship between body movements and speech."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "scipy >= 1.11.0, < 2",
    "numpy >= 1.25.0, < 2",
    "opencv-python == 4.8.0.76"
]

[project.urls]
"Homepage" = "https://github.com/RomainPastureau/Krajjat"
"Bug Tracker" = "https://github.com/RomainPastureau/Krajjat/issues"
"Documentation" = "https://krajjat.readthedocs.io/en/latest/"

